reimplement /rail command and some changes to rail Section and related